--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,8 +43,8 @@ dependencies {
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
-
-    implementation project(":koin-auto-service")
+    implementation "com.github.z-chu:ArchKit:0.1.1"
+    //implementation project(":koin-auto-service")
     implementation project(":mock-android-component")
 
     implementation 'org.koin:koin-android:2.1.6'
