--- a/app/build.gradle
+++ b/app/build.gradle
@@ -46,6 +46,10 @@ dependencies {
     implementation project(":koin-auto-service")
     implementation project(":mock-android-component")
     implementation project(":statefulresult")
+    implementation project(":statefulresult-rx3")
+    implementation project(":lifecycle-rx3")
+    implementation "io.reactivex.rxjava3:rxjava:3.0.4"
+    implementation "io.reactivex.rxjava3:rxandroid:3.0.0"
 
     implementation 'org.koin:koin-android:2.1.6'
 
