--- a/statefulresult-rx3/build.gradle
+++ b/statefulresult-rx3/build.gradle
@@ -35,8 +35,13 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    implementation "io.reactivex.rxjava3:rxjava:3.0.4"
+    implementation project(":statefulresult")
     implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.2.0'
+
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+
+
 }
