--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,6 @@
 include ':lifecycle-rx3'
 include ':statefulresult-rx3'
+include ':statefulresult-call'
 include ':statefulresult'
 include ':mock-android-component'
 include ':koin-auto-service'
