--- a/koin-auto-service/build.gradle
+++ b/koin-auto-service/build.gradle
@@ -4,12 +4,11 @@ plugins {
 }
 
 android {
-    compileSdkVersion 30
-    buildToolsVersion "30.0.2"
+    compileSdkVersion 31
 
     defaultConfig {
         minSdkVersion 9
-        targetSdkVersion 30
+        targetSdkVersion 31
     }
 
 
@@ -25,7 +24,7 @@ android {
 dependencies {
 
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
-    implementation 'org.koin:koin-android:2.1.6'
+    implementation 'io.insert-koin:koin-android:3.1.4'
     testImplementation 'junit:junit:4.+'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
